--- a/云开发项目/pages/home/introduction/introduction.wxml
+++ b/云开发项目/pages/home/introduction/introduction.wxml
@@ -27,14 +27,14 @@
     <text user-select="true" decode="true">&emsp;&emsp;{{school_information.text}}</text>
 </view>
 
-<view class="video-font" wx:if="{{videourl}}">
-    学校风光
-</view>
+<!--<view class="video-font" wx:if="{{videourl}}">-->
+<!--    学校风光-->
+<!--</view>-->
 
-<view class="video" wx:if="{{videourl}}">
-    <video initial-time="1" src="{{videourl}}" />
-</view>
+<!--<view class="video" wx:if="{{videourl}}">-->
+<!--    <video initial-time="1" src="{{videourl}}" />-->
+<!--</view>-->
 
-<view class="bottom-font">
-    信息来源：学校官网
-</view>
+<!--<view class="bottom-font">-->
+<!--    信息来源：学校官网-->
+<!--</view>-->
