--- a/静态项目/pages/home/home.wxml
+++ b/静态项目/pages/home/home.wxml
@@ -1,155 +1,181 @@
 <!--pages/home/home.wxml-->
 <view style="height: auto;">
-  <view class="list-landscape-container">
-    <swiper class="list-landscape-container-swiper" next-margin="20px" indicator-dots="{{indicatorDots}}" indicator-color="{{indicatorColor}}" indicator-active-color="{{activeColor}}" autoplay="{{autoplay}}" circular="{{circular}}" interval="{{interval}}" duration="{{duration}}" indicator-color="{{indicatorColor}}" indicator-active-color="{{activeColor}}">
-      <block wx:for="{{background}}" wx:key="*this">
-        <swiper-item>
-          <view class="list-landscape-container-swiper-item">
-            <image class="list-landscape-container-swiper-item-img" mode="widthFix" bindload="imgHeight" src="{{item}}" bindtap="lookPhoto" data-src="{{item}}"></image>
-          </view>
-        </swiper-item>
-      </block>
-    </swiper>
+    <view class="list-landscape-container">
+        <swiper class="list-landscape-container-swiper" next-margin="20px" indicator-dots="{{indicatorDots}}"
+                indicator-color="{{indicatorColor}}" indicator-active-color="{{activeColor}}" autoplay="{{autoplay}}"
+                circular="{{circular}}" interval="{{interval}}" duration="{{duration}}"
+                indicator-color="{{indicatorColor}}" indicator-active-color="{{activeColor}}">
+            <block wx:for="{{background}}" wx:key="*this">
+                <swiper-item>
+                    <view class="list-landscape-container-swiper-item">
+                        <image class="list-landscape-container-swiper-item-img" mode="widthFix" bindload="imgHeight"
+                               src="{{item}}" bindtap="lookPhoto" data-src="{{item}}"></image>
+                    </view>
+                </swiper-item>
+            </block>
+        </swiper>
 
-    <view class="list-landscape-container-icon" style="margin-left:306rpx">
-      <image class="list-landscape-container-icon-img" src="{{school_logo}}" />
+        <view class="list-landscape-container-icon" style="margin-left:306rpx">
+            <image class="list-landscape-container-icon-img" src="{{school_logo}}"/>
+        </view>
+
+        <view class="list-landscape-container-icon" style="margin-left:556rpx;margin-top: -66rpx;">
+            <image class="list-landscape-container-icon-school" src="{{label}}" bindtap="tointroduction"></image>
+        </view>
+
+        <view class="list-landscape-container-text">
+            {{school_information.school_name_full}}
+        </view>
     </view>
 
-    <view class="list-landscape-container-icon" style="margin-left:556rpx;margin-top: -66rpx;">
-      <image class="list-landscape-container-icon-school" src="{{label}}" bindtap="tointroduction"></image>
+    <view class="card-container">
+        <view class="left-right-container">
+            <view class="left-right-item">
+                <image src="{{schoolIcon}}" bindtap="construct"></image>
+                <label>云大建筑</label>
+            </view>
+            <view class="left-right-item">
+                <image src="{{booking}}" bindtap="book"></image>
+                <label>访客预约</label>
+            </view>
+            <view class="left-right-item">
+                <image src="../../images/link.png" bindtap="link"></image>
+                <label>quick link</label>
+            </view>
+
+        </view>
+        <view class="card-container-card">
+            <view class="card-container-card-title">
+                🚩 云大地图
+            </view>
+
+            <view class="two">
+                <image class="card-container-card-button" src="{{function_buttons[0]}}" mode="" bindtap="map"/>
+                <image class="card-container-card-button" src="{{function_buttons[5]}}" mode="" bindtap="site"/>
+            </view>
+        </view>
     </view>
 
-    <view class="list-landscape-container-text">
-      {{school_information.school_name_full}}
-    </view>
-  </view>
-
-  <view class="list-info">
-    <view class="list-info-container">
-      <view class="list-info-container-titletext red">
-        {{school_information.motto}}
-      </view>
-
-      <view class="list-info-container-text">
-        建校时间：{{school_information.build_time}}年
-      </view>
-
-      <view class="list-info-container-text">
-        院校类型：{{school_information.institution_type}}
-      </view>
+    <view class="list-laba">
+        <image class="list-laba-image" src="{{weather}}"/>
+        <view class="list-laba-text weather_text">
+            校园天气
+        </view>
     </view>
 
-    <view class="list-info-container">
-      <view class="list-info-container-titletext blue">
-        {{school_information.honor}}
-      </view>
+    <view class="card-container">
+        <view class="card-container-weather">
+            <view class="card-container-weather-city">
+                {{school_information.location}}
+            </view>
 
-      <view class="list-info-container-text">
-        办校类型：{{school_information.school_type}}院校
-      </view>
+            <view class="card-container-weather-tmp">
+                <view>{{now.temp}}°</view>
+                <image class="card-container-weather-tmp-icon"
+                       src="https://icons.qweather.com/assets/icons/{{now.icon}}.svg"></image>
+                <!-- <image class="card-container-weather-tmp-icon" src="https://a.hecdn.net/img/common/icon/202106d/{{now.icon}}.png"></image> -->
+            </view>
 
-      <view class="list-info-container-text">
-        所在地：{{school_information.location}}
-      </view>
+            <view class="card-container-weather-info">
+                <view>{{now.windDir}} {{now.windScale}}级</view>
+                <view>湿度 {{now.humidity}}%</view>
+                <view>气压 {{now.pressure}}Pa</view>
+            </view>
+            <image class="card-container-wave" src="{{wave}}"></image>
+        </view>
     </view>
-  </view>
 
-  <view class="list-laba">
-    <image class="list-laba-image" src="{{laba}}" />
-    <view class="list-laba-text">
-      欢迎使用{{miniprogram_name}}小程序
+    <view class="bottom-font">
+        {{miniprogram_name}}小程序 | 版权归开发者所有
     </view>
-  </view>
-
-  <view class="card-container">
-    <view class="card-container-card">
-      <view class="card-container-card-title">
-        🚩 常用功能
-      </view>
-
-      <view class="two">
-
-        <image class="card-container-card-button" src="{{function_buttons[0]}}" mode="" bindtap="map" />
-
-        <image class="card-container-card-button" src="{{function_buttons[1]}}" mode="" bindtap="school" />
-
-      </view>
-
-      <view class="two">
-
-        <image class="card-container-card-button" src="{{function_buttons[5]}}" mode="" bindtap="site" />
-
-        <image class="card-container-card-button" src="{{function_buttons[3]}}" mode="" bindtap="link" />
-
-      </view>
-
-    </view>
-  </view>
-
-  <view class="list-laba">
-    <image class="list-laba-image" src="{{weather}}" />
-    <view class="list-laba-text weather_text">
-      校园天气
-    </view>
-  </view>
-
-  <view class="card-container">
-    <view class="card-container-weather">
-      <view class="card-container-weather-city">
-        {{school_information.location}}
-      </view>
-
-      <view class="card-container-weather-tmp">
-        <view>{{now.temp}}°</view>
-        <image class="card-container-weather-tmp-icon" src="https://icons.qweather.com/assets/icons/{{now.icon}}.svg"></image>
-        <!-- <image class="card-container-weather-tmp-icon" src="https://a.hecdn.net/img/common/icon/202106d/{{now.icon}}.png"></image> -->
-      </view>
-
-      <view class="card-container-weather-info">
-        <view>{{now.windDir}} {{now.windScale}}级</view>
-        <view>湿度 {{now.humidity}}%</view>
-        <view>气压 {{now.pressure}}Pa</view>
-      </view>
-
-      <image class="card-container-wave" src="{{wave}}"></image>
-    </view>
-  </view>
-
-  <view class="bottom-font">
-    {{miniprogram_name}}小程序 | 版权归开发者所有
-  </view>
 
 </view>
 
 <mp-dialog title="友情链接" show="{{dialogShow}}" bindbuttontap="mapmarker" buttons="{{buttons}}">
-  <view class="list-row">
+    <view class="list-row">
 
-    <view class="list-row-container" bindtap="toschool">
-      <image class="list-row-container-img" src="{{school_icon}}" />
-      <view class="list-row-container-text">
-        学校
-      </view>
+        <!--        第一列-->
+        <view class="list-row-container" bindtap="toGuanwang">
+            <image class="list-row-container-img" src="{{school_icon}}"/>
+            <view class="list-row-container-text">
+                官网
+            </view>
+        </view>
+
+        <view class="list-row-container" bindtap="toXiwen">
+            <image class="list-row-container-img" src="{{xinwenIcon}}"/>
+            <view class="list-row-container-text">
+                新闻网
+            </view>
+        </view>
+
+        <view class="list-row-container" bindtap="toBnahsi">
+            <image class="list-row-container-img" src="{{banshiIcon}}"/>
+            <view class="list-row-container-text">
+                办事服务大厅
+            </view>
+        </view>
+
+
+        <view class="list-row-container" bindtap="toMiniProgram">
+            <image class="list-row-container-img" src="{{allInOneCard}}"/>
+            <view class="list-row-container-text">
+                一卡通
+            </view>
+        </view>
+
     </view>
 
-    <view class="list-row-container" bindtap="tolibrary">
-      <image class="list-row-container-img" src="{{book}}" />
-      <view class="list-row-container-text">
-        图书馆
-      </view>
-    </view>
+    <view class="list-row">
+        <!--        第二列-->
+        <view class="list-row-container" bindtap="toZhaoshengImg">
+            <image class="list-row-container-img" src="{{zhaoshengIcon}}"/>
+            <view class="list-row-container-text">
+                云大招生
+            </view>
+        </view>
+        <view class="list-row-container" bindtap="toYNUImg">
+            <image class="list-row-container-img" src="{{ynuIcon}}"/>
+            <view class="list-row-container-text">
+                云南大学
+            </view>
+        </view>
+        <view class="list-row-container" bindtap="toPinganImg">
+            <image class="list-row-container-img" src="{{pinganIcon}}"/>
+            <view class="list-row-container-text">
+                平安云大
+            </view>
+        </view>
+        <view class="list-row-container" bindtap="toXiaoyiyuanImg">
+            <image class="list-row-container-img" src="{{yiyuanIcon}}"/>
+            <view class="list-row-container-text">
+                校医院
+            </view>
+        </view>
 
-    <view class="list-row-container" bindtap="tofinance">
-      <image class="list-row-container-img" src="{{money}}" />
-      <view class="list-row-container-text">
-        财务处
-      </view>
     </view>
-
-    <view class="list-row-container" bindtap="toMiniProgram">
-      <image class="list-row-container-img" src="{{magazine}}" />
-      <view class="list-row-container-text">
-        招生
-      </view>
-    </view>
-  </view>
 </mp-dialog>
+
+<!--&lt;!&ndash;pages/home/home.wxml&ndash;&gt;-->
+<!--<view style="height: auto; position: relative;"> &lt;!&ndash; 给父容器加上 relative &ndash;&gt;-->
+<!--    &lt;!&ndash; 固定按钮 &ndash;&gt;-->
+<!--    <view class="fixed-button" bindtap="navigateToNewPage">-->
+<!--        <image class="fixed-button-icon" src="/images/ai 机器人.png"/>-->
+<!--    </view>-->
+
+<!--    &lt;!&ndash; 机器人气泡框 &ndash;&gt;-->
+<!--    <view class="bubble">-->
+<!--        点我来聊聊关于云大的事吧~-->
+<!--    </view>-->
+<!--</view>-->
+
+<!-- 在页面wxml文件中添加 -->
+<view class="chat-container">
+    <!-- 气泡对话框 -->
+    <view class="bubble">
+        <text>点我来聊聊关于云大的事吧~</text>
+    </view>
+
+    <!-- 机器人按钮 -->
+    <image class="robot-btn" src="/images/AIRobot.png" bindtap="navigateToNewPage"></image>
+</view>
