--- a/静态项目/pages/home/home.wxss
+++ b/静态项目/pages/home/home.wxss
@@ -1,261 +1,263 @@
 /* pages/home/home.wxss */
 .list-landscape-title {
-  padding-top: 5px;
-  font-size: 22px;
-  margin-left: 10px;
-  font-weight: bold;
+    padding-top: 5px;
+    font-size: 22px;
+    margin-left: 10px;
+    font-weight: bold;
 }
 
 .list-landscape-container {
-  margin-top: 10px;
+    margin-top: 10px;
 }
 
 .list-landscape-container .wx-swiper-dot.wx-swiper-dot-active {
-  width: 33rpx;
-  border-radius: 15rpx;
+    width: 33rpx;
+    border-radius: 15rpx;
 }
 
 /* 指示点靠右 */
 .wx-swiper-dots {
-  position: relative;
-  left: unset !important;
-  right: 0;
+    position: relative;
+    left: unset !important;
+    right: 0;
 }
 
 .list-landscape-container-swiper {
-  height: 388rpx;
+    height: 388rpx;
 }
 
 .list-landscape-container-swiper-item {
-  margin-left: 22rpx;
-  /* height: 100%; */
+    margin-left: 22rpx;
+    /* height: 100%; */
 }
 
 .list-landscape-container-swiper-item-img {
-  width: 100%;
-  height: auto;
-  border-radius: 8px;
+    width: 100%;
+    height: auto;
+    border-radius: 8px;
 }
 
 .list-landscape-container-icon {
-  position: relative;
-  margin-top: -70rpx;
-  display: flex;
-  align-items: center;
+    position: relative;
+    margin-top: -70rpx;
+    display: flex;
+    align-items: center;
 }
 
 .list-landscape-container-icon-img {
-  height: 140rpx;
-  width: 140rpx;
+    height: 140rpx;
+    width: 140rpx;
+    border-radius: 50%;
 }
 
 .list-landscape-container-icon-school {
-  height: 60rpx;
-  width: 174rpx;
+    height: 60rpx;
+    width: 174rpx;
 }
 
 .list-landscape-container-text {
-  width: 100%;
-  display: flex;
-  justify-content: center;
-  margin-top: 3px;
-  /* padding-bottom: 3px; */
-  font-size: 24px;
-  text-align: center;
+    width: 100%;
+    display: flex;
+    justify-content: center;
+    margin-top: 3px;
+    /* padding-bottom: 3px; */
+    font-size: 24px;
+    text-align: center;
 }
 
 .list-info {
-  /* padding: 8px; */
-  display: flex;
-  justify-content: space-around;
-  align-items: center;
-  font-size: 16px;
-  padding-bottom: 8px;
+    /* padding: 8px; */
+    display: flex;
+    justify-content: space-around;
+    align-items: center;
+    font-size: 16px;
+    padding-bottom: 8px;
 }
 
 .list-info-container {
-  display: flex;
-  flex-direction: column;
-  align-items: center;
-  justify-content: center;
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+    justify-content: center;
 }
 
 .list-info-container-titletext {
-  color: white;
-  border-radius: 15px;
-  padding: 2px 10px;
-  /* margin-bottom: 10px; */
-  margin-top: 10px;
-  margin-bottom: 8px;
-  /* font-size: small; */
+    color: white;
+    border-radius: 15px;
+    padding: 2px 10px;
+    /* margin-bottom: 10px; */
+    margin-top: 10px;
+    margin-bottom: 8px;
+    /* font-size: small; */
 }
 
 .red {
-  background: #ec3b2ecc;
+    background: #ec3b2ecc;
 }
 
 .blue {
-  background: #5fa1ec;
+    background: #5fa1ec;
 }
 
 .green {
-  background: #37b69aea;
+    background: #37b69aea;
 }
 
 .list-info-container-text {
-  margin-top: 5px;
-  width: 100%;
-  text-align: center;
+    margin-top: 5px;
+    width: 100%;
+    text-align: center;
 }
 
 .list-row {
-  /* padding: 10px; */
-  display: flex;
-  justify-content: space-around;
-  align-items: center;
+    /* padding: 10px; */
+    display: flex;
+    justify-content: space-around;
+    align-items: center;
+    margin-bottom: 10px;
 }
 
 .list-row-container {
-  display: flex;
-  flex-direction: column;
-  align-items: center;
-  justify-content: center;
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+    justify-content: center;
 }
 
 .list-row-container-img {
-  width: 50px;
-  height: 50px;
+    width: 50px;
+    height: 50px;
 }
 
 .list-row-container-text {
-  font-size: 15px;
-  margin-top: 5px;
+    font-size: 15px;
+    margin-top: 5px;
 }
 
 .list-l {
-  margin-top: 10px;
+    margin-top: 10px;
 }
 
 .list-list {
-  padding: 15px;
-  display: flex;
-  justify-content: space-between;
-  align-items: center;
-  border-bottom: solid 1px #e1e1e1;
+    padding: 15px;
+    display: flex;
+    justify-content: space-between;
+    align-items: center;
+    border-bottom: solid 1px #e1e1e1;
 }
 
 .list-list-left {
-  display: flex;
-  justify-content: flex-start;
-  align-items: center;
+    display: flex;
+    justify-content: flex-start;
+    align-items: center;
 }
 
 .list-list-left-icon {
-  width: 20px;
-  height: 20px;
-  margin-right: 10px;
+    width: 20px;
+    height: 20px;
+    margin-right: 10px;
 }
 
 .list-list-left-text {
-  font-size: 15px;
+    font-size: 15px;
 }
 
 .normal {
-  font-weight: normal;
+    font-weight: normal;
 }
 
 .list-list-left-text-key {
-  font-size: 15px;
-  color: cornflowerblue;
+    font-size: 15px;
+    color: cornflowerblue;
 }
 
 .list-list-right {
-  width: 15px;
-  height: 15px
+    width: 15px;
+    height: 15px
 }
 
 .list-laba {
-  height: 37px;
-  display: flex;
-  align-items: center;
+    height: 37px;
+    display: flex;
+    align-items: center;
 }
 
 .list-laba-image {
-  width: 30px;
-  height: 30px;
-  margin-left: 10px;
+    width: 30px;
+    height: 30px;
+    margin-left: 10px;
 }
 
 .list-laba-text {
-  margin-left: 20px;
+    margin-left: 20px;
 }
 
 .small_text {
-  font-size: small;
+    font-size: small;
 }
 
 .weather_text {
-  color: #73a5d6;
-  font-size: 20px;
+    color: #73a5d6;
+    font-size: 20px;
 }
 
 .forward-button {
-  margin-top: 10px;
+    margin-top: 10px;
 }
 
 .card-container {
-  padding: 10px 0;
+    padding: 10px 0;
 }
 
 .card-container-card {
-  margin: 0 15px;
-  padding-top: 5px;
-  border-radius: 10px;
-  /* height: 190px; */
-  /* background-color: #64C8FA; */
-  /* background-color: white; */
-  background-color: ghostwhite;
-  /* background-color: rgb(238, 235, 235); */
-  border: 1px solid rgb(238, 235, 235);
-  /* box-shadow: 2px 2px 2px #a19f9f; */
-  /* background: linear-gradient(to bottom, #56CCF2, #2F80ED); */
+    margin: 0 15px;
+    padding-top: 5px;
+    border-radius: 10px;
+    /* height: 190px; */
+    /* background-color: #64C8FA; */
+    /* background-color: white; */
+    background-color: ghostwhite;
+    /* background-color: rgb(238, 235, 235); */
+    border: 1px solid rgb(238, 235, 235);
+    /* box-shadow: 2px 2px 2px #a19f9f; */
+    /* background: linear-gradient(to bottom, #56CCF2, #2F80ED); */
 }
 
 .card-container-card-title {
-  /* font-size: 20px; */
-  font-size: larger;
-  font-weight: bold;
-  position: relative;
-  /* margin-left: 22px; */
-  margin-left: 10px;
-  /* color: white; */
-  height: 28px;
-  margin-bottom: 10px;
+    /* font-size: 20px; */
+    font-size: larger;
+    font-weight: bold;
+    position: relative;
+    /* margin-left: 22px; */
+    margin-left: 10px;
+    /* color: white; */
+    height: 28px;
+    margin-bottom: 10px;
 }
 
 .two {
-  width: 100%;
-  display: flex;
-  justify-content: space-around;
-  padding-bottom: 10px;
+    width: 100%;
+    display: flex;
+    justify-content: space-around;
+    padding-bottom: 10px;
 }
 
 .card-container-card-button {
-  width: 160px;
-  height: 68px;
-  /* border: 1px solid gray;
-  border-radius: 20px;
-  display: flex;
-  justify-content: space-around;
-  align-items: center; */
+    width: 160px;
+    height: 68px;
+    /* border: 1px solid gray;
+    border-radius: 20px;
+    display: flex;
+    justify-content: space-around;
+    align-items: center; */
 }
 
 .yellow {
-  background-color: #ffe08d;
+    background-color: #ffe08d;
 }
 
 .blue {
-  background-color: #4393ec;
+    background-color: #4393ec;
 }
 
 /* .red {
@@ -267,55 +269,178 @@
 } */
 
 .card-container-weather {
-  margin: 0 15px;
-  padding-top: 15px;
-  border-radius: 10px;
-  height: 190px;
-  background-color: #64C8FA;
-  background: linear-gradient(to bottom, #56CCF2, #2F80ED);
+    margin: 0 15px;
+    padding-top: 15px;
+    border-radius: 10px;
+    height: 190px;
+    background-color: #64C8FA;
+    background: linear-gradient(to bottom, #56CCF2, #2F80ED);
 }
 
 .card-container-weather-city {
-  font-size: 20px;
-  font-weight: bold;
-  position: relative;
-  margin-left: 22px;
-  color: white;
-  height: 28px;
+    font-size: 20px;
+    font-weight: bold;
+    position: relative;
+    margin-left: 22px;
+    color: white;
+    height: 28px;
 }
 
 .card-container-weather-tmp {
-  margin-left: 15px;
-  margin-right: 15px;
-  font-size: 80px;
-  display: flex;
-  align-items: center;
-  justify-content: space-between;
-  color: white;
-  height: 106px;
+    margin-left: 15px;
+    margin-right: 15px;
+    font-size: 80px;
+    display: flex;
+    align-items: center;
+    justify-content: space-between;
+    color: white;
+    height: 106px;
 }
 
 .card-container-weather-tmp-icon {
-  height: 100px;
-  width: 100px;
+    height: 100px;
+    width: 100px;
 }
 
 .card-container-weather-info {
-  margin-left: 15px;
-  margin-right: 15px;
-  margin-top: 8px;
-  color: white;
-  display: flex;
-  align-items: center;
-  justify-content: space-between;
-  height: 21px;
+    margin-left: 15px;
+    margin-right: 15px;
+    margin-top: 8px;
+    color: white;
+    display: flex;
+    align-items: center;
+    justify-content: space-between;
+    height: 21px;
 }
 
 .card-container-wave {
-  height: 80px;
-  width: 100%;
-  position: relative;
-  bottom: 50px;
-  mix-blend-mode: screen;
-  border-radius: 10px;
+    height: 80px;
+    width: 100%;
+    position: relative;
+    bottom: 50px;
+    mix-blend-mode: screen;
+    border-radius: 10px;
+}
+
+
+/*!* pages/home/home.wxss *!*/
+
+/*.fixed-button {*/
+/*    position: fixed;*/
+/*    bottom: 20rpx; !* 距离底部 *!*/
+/*    right: 20rpx;  !* 距离右边 *!*/
+/*    width: 120rpx;*/
+/*    height: 120rpx;*/
+/*    border-radius: 50%;*/
+/*    background-color: transparent;*/
+/*    display: flex;*/
+/*    justify-content: center;*/
+/*    align-items: center;*/
+/*    !*box-shadow: 0 4rpx 8rpx rgba(0, 0, 0, 0.2);*!*/
+/*    !*z-index: 999;*!*/
+/*}*/
+
+/*.fixed-button-icon {*/
+/*    width: 120rpx;*/
+/*    height: 120rpx;*/
+/*}*/
+
+/*!* 机器人气泡框样式 *!*/
+/*.bubble {*/
+/*    position: absolute;*/
+/*    top: -40rpx; !* 距离按钮顶部的距离 *!*/
+/*    left: -120rpx; !* 距离按钮左边的距离 *!*/
+/*    width: 120rpx;*/
+/*    height: 40rpx;*/
+/*    line-height: 40rpx;*/
+/*    text-align: center;*/
+/*    background-color: #fff;*/
+/*    border-radius: 8rpx;*/
+/*    box-shadow: 0 2rpx 4rpx rgba(0, 0, 0, 0.2);*/
+/*    font-size: 12px;*/
+/*    color: #333;*/
+/*    white-space: nowrap; !* 防止文字换行 *!*/
+/*    padding: 0 8rpx; !* 左右内边距 *!*/
+/*    content: "点我来聊聊关于云大的事吧~"; !* 气泡框中的文字内容 *!*/
+/*}*/
+
+/* 在对应页面的wxss文件中添加 */
+.chat-container {
+    position: fixed;
+    right: 30rpx;
+    bottom: 30rpx;
+    z-index: 999;
+}
+
+.robot-btn {
+    width: 120rpx;
+    height: 120rpx;
+    display: block;
+}
+
+.bubble {
+    position: absolute;
+    left: -340rpx;
+    top: -20rpx;
+    width: 320rpx;
+    padding: 20rpx;
+    background: #e8eef1;
+    border-radius: 12rpx;
+    box-shadow: 0 4rpx 12rpx rgba(0, 0, 0, 0.1);
+    font-size: 26rpx;
+    color: #333;
+    text-align: center;
+}
+
+/* 气泡小三角 */
+.bubble::after {
+    content: '';
+    position: absolute;
+    right: -20rpx;
+    top: 50%;
+    transform: translateY(-50%);
+    border-width: 10rpx;
+    border-style: solid;
+    border-color: transparent transparent transparent #fff;
+}
+
+/* 如果需要点击效果可以添加 */
+.robot-btn:active {
+    transform: scale(0.95);
+    opacity: 0.8;
+}
+
+@keyframes breathe {
+    0% { transform: scale(1); }
+    50% { transform: scale(1.05); }
+    100% { transform: scale(1); }
+}
+
+.robot-btn {
+    animation: breathe 10s infinite;
+}
+
+
+
+.left-right-container {
+    display: flex;
+    justify-content: space-around; /* 两项分布在容器的两边 */
+    align-items: center; /* 垂直居中 */
+    width: 100%; /* 确保容器宽度占满父容器 */
+    margin-bottom: 10px;
+}
+
+.left-right-item {
+    display: flex;
+    flex-direction: column; /* 让图片和文字竖直排列 */
+    align-items: center; /* 图片和文字水平居中 */
+}
+
+.left-right-item image {
+    width: 50px; /* 可以根据需要调整图片大小 */
+    height: 50px;
+}
+
+.left-right-item label {
+    margin-top: 8px; /* 文字与图片之间的间距 */
 }
